Fix for grey btn issue on mobile, refactor code

--- a/src/app/promo-code/promo-details/promo-details.component.scss
+++ b/src/app/promo-code/promo-details/promo-details.component.scss
@@ -116,6 +116,7 @@ app-promo-details {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 26px;
+    border: none;
   }
 
 
